# small_grpc_tui

./: Cargo.toml  build.rs
protos/: latencies.proto
src/: server.rs
